Set cursor:none on entire face morph section to stop native cursor flickering

--- a/css/zoom-out.css
+++ b/css/zoom-out.css
@@ -13,6 +13,7 @@
   width: 100%;
   height: 100vh;
   overflow: hidden;
+  cursor: none !important;
 }
 
 .zoomout__bg {
